Implement Apex Legends lightmap and shadow mesh support - WIP NOT FULLY WORKING
Added generation and writing of lightmap and shadow mesh lumps for Apex Legends BSP files. Replaced stub data for world lights, shadow environments, and related lumps with actual data and generation functions. Updated CMakeLists to include new source file for lightmaps.

--- a/tools/remap/CMakeLists.txt
+++ b/tools/remap/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(remap
                common/vfs.cpp
                common/vfs.h
                source/apex_legends/apex_legends_collisions.cpp
+               source/apex_legends/apex_legends_lightmaps.cpp
                source/apex_legends/apex_legends_misc.cpp
                source/apex_legends/apex_legends_vis.cpp
                source/apex_legends/apex_legends.cpp
