Improve Apex Legends light probe placement and export
Enhanced the light probe placement algorithm for Apex Legends by adding minimum distance checks from geometry, pushing probes away from surfaces, and placing extra probes at shadow boundaries. Also added functionality to export probe positions for visualization in Radiant. Updated gamepack config for correct engine and basegame values, and integrated new probe features into the Radiant UI and plugin lifecycle.

--- a/radiant/CMakeLists.txt
+++ b/radiant/CMakeLists.txt
@@ -54,6 +54,7 @@ add_executable(radiant
                plugin.cpp
                plugintoolbar.cpp
                points.cpp
+               probes.cpp
                preferencedictionary.cpp
                preferences.cpp
                qe3.cpp
