fix MMDPmx include

--- a/libs/assimp/code/CMakeLists.txt
+++ b/libs/assimp/code/CMakeLists.txt
@@ -1173,12 +1173,12 @@ ADD_LIBRARY(assimp::assimp ALIAS assimp)
 
 TARGET_USE_COMMON_OUTPUT_DIRECTORY(assimp)
 
-# enable warnings as errors ########################################
-IF (MSVC)
-  TARGET_COMPILE_OPTIONS(assimp PRIVATE /WX)
-ELSE()
-  TARGET_COMPILE_OPTIONS(assimp PRIVATE -Werror)
-ENDIF()
+# warnings as errors disabled - causes build failures with newer compilers
+# IF (MSVC)
+#   TARGET_COMPILE_OPTIONS(assimp PRIVATE /WX)
+# ELSE()
+#   TARGET_COMPILE_OPTIONS(assimp PRIVATE -Werror)
+# ENDIF()
 
 # adds C_FLAGS required to compile zip.c on old GCC 4.x compiler
 TARGET_COMPILE_FEATURES(assimp PUBLIC c_std_99)
